Elevated callback's z-index (bug)

--- a/assets/css/manage-books.css
+++ b/assets/css/manage-books.css
@@ -159,7 +159,7 @@ td img{
   height: 100%;
   width: 100%;
   display: none;
-  z-index: 10;
+  z-index: 4;
   background-color: #30303080;
 }
 
@@ -296,7 +296,7 @@ td img{
   bottom: 0;
   right: 0;
   margin-bottom: 30px;
-  z-index: 2;
+  z-index: 6;
   transition: .5s linear;
   transform: translateX(300px);
   transition: .5s linear;
